ws_test_out.txt
    Blocking waiting for file lock on build directory
   Compiling taskrails v1.0.0 (E:\Dev\desktop\taskrails\src-tauri)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `taskrails`
 --> src\bin\ws_test.rs:1:5
  |
1 | use taskrails::satellite::start_server;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `taskrails`
  |
  = help: if you wanted to use a crate named `taskrails`, use `cargo add taskrails` to add it to your `Cargo.toml`

For more information about this error, try `rustc --explain E0433`.
error: could not compile `taskrails` (bin "ws_test") due to 1 previous error
